<resources>
    <string name="app_name">乱发型</string>
    <string name="index">首页</string>
    <string name="user">我的</string>
    <string name="camera">拍照</string>
    <string name="all">全部</string>
    <string name="boy">男性</string>
    <string name="girl">女性</string>
    <string name="face_circle">圆脸</string>
    <string name="hair_store">发型库</string>
    <string name="cancel">取消</string>
    <string name="sure">确认</string>
    <string name="select_face">选择脸型</string>
    <string name="hair_default_name">清爽迷你姑</string>
    <string name="take_photo_test">拍照查看理发效果</string>
    <string name="hair_intro">发型介绍</string>
    <string name="hair_service">发型打理</string>
    <string name="recommond_hair">推荐发型</string>
    <string name="send_email">Send email…</string>
    <string name="fallback_msg">Could not open custom tab, falling back to webview.</string>
    <string name="open_with">Open with…</string>
    <string name="open_in_browser">Open in %1$s</string>
    <string name="unxp_err">Unexpected error, try again</string>
    <string name="unsupported_link">Not a supported link, try again</string>
    <string name="couldnt_load_price">Couldn\'t load price</string>
    <string name="coffee">Coffee</string>
    <string name="lunch">Lunch</string>
    <string name="premium_donation">Premium Donation</string>
    <string name="invalid_link">Invalid link</string>
    <string name="copied">Copied</string>
    <string name="copy_link">Copy link</string>
    <string name="add_to_homescreen">Add to Home Screen</string>
    <string name="intro_1">Hello! \nLynket is a light-weight, secure and a fast web browser.</string>
    <string name="intro_4_new">It can stack multiple links in floating bubbles when you open them and then load them in background!</string>
    <string name="how_to_use">How to use this?</string>
    <string name="intro_6">Just set Lynket as your default browser, Lynket will display the link in a non-intrusive way. Or choose Lynket when needed.</string>
    <string name="version">Version</string>
    <string name="changelog">Changelog</string>
    <string name="join_google_plus">Join Google+ Community</string>
    <string name="share_ideas">Share your ideas!</string>
    <string name="support_development">Support Development</string>
    <string name="consider_donation">Consider a donation</string>
    <string name="add_to_circles">Add to Google+ Circles</string>
    <string name="follow_twitter">Follow on Twitter</string>
    <string name="connect_linkedIn">Connect on LinkedIn</string>
    <string name="more_apps">More apps</string>
    <string name="author">Author</string>
    <string name="added">Added</string>
    <string name="settings">Settings</string>
    <string name="colored_toolbar">Colored toolbar</string>
    <string name="choose_animation">Opening animation</string>
    <string name="animation_speed">Animation speed</string>
    <string name="default_pref_xpln">Set Lynket as default to open all links, or you can choose Lynket from the list when it is shown</string>
    <string name="personalization">Personalization</string>
    <string name="default_clear_msg">is set as the default browser, please clear it by clicking clear defaults.</string>
    <string name="dynamic_toolbar_color">Dynamic toolbar color</string>
    <string name="keep_chrome_warmedup">Keep your browser in memory for faster launch</string>
    <string name="warmup_browser">Warm up browser</string>
    <string name="set_default_chromer">Set As Default Browser</string>
    <string name="default_provider">Custom tab provider</string>
    <string name="pre_fetch_content">Prefetch content</string>
    <string name="pre_fetch_desc">Scan your screen for links and load them in background for instant launch</string>
    <string name="accessibility_description">This service will be used by Lynket to scan text links on your screen and load them in the background. No other information is processed by Lynket. You can still use Lynket in light mode if you choose to not grant this. For more information, launch Lynket app.</string>
    <string name="accessibility_dialog_title">Accessibility permission required</string>
    <string name="accessibility_dialog_desc">To allow Lynket to scan for links in any app, it requires you to grant accessibility service permission. Please grant accessibility permission in the next screen, after which you can enable this option and enjoy quick launches.</string>
    <string name="open_settings">Open Settings</string>
    <string name="only_on_wifi">Scan only on Wi-Fi</string>
    <string name="show_notification">Show notification when a link is prefetched</string>
    <string name="default_toolbar_color">Default toolbar color</string>
    <string name="web_heads_color">Web heads color</string>
    <string name="choose_secondary_browser">Secondary browser</string>
    <string name="dynamic_toolbar_help">To enable dynamic coloring of toolbar, Lynket learns the colors silently. It might not come initially for a website or an app, but it will improve over time with usage. Enjoy!</string>
    <string name="secondary_browser_success">%1$s set as the secondary browser!</string>
    <string name="fav_share_success">%1$s set as your favorite share app!</string>
    <string name="default_provider_success">%1$s will be used to provide Custom Tabs!</string>
    <string name="based_on_app">Based on app</string>
    <string name="based_on_web">Based on website</string>
    <string name="preferred_action">Preferred action</string>
    <string name="fav_share_app">Favorite share app</string>
    <string name="choose_fav_share_app">Choose favorite share app</string>
    <string name="dynamic_summary_appweb">Color will be based on website if the site supports it else will be based on app</string>
    <string name="dynamic_summary_app">Color will be based on app that launches the website</string>
    <string name="dynamic_summary_web">Color will be based on the launched website</string>
    <string name="no_option_selected">No options selected</string>
    <string name="permission_required">Permission required</string>
    <string name="usage_permission_explanation_appcolor">To enable dynamic coloring of toolbar based on apps, Lynket needs your permission to know the apps you are using. Would you like to grant this permission now?</string>
    <string name="usage_permission_explanation_per_apps">To enable per app settings, Lynket needs your permission to know the apps you are using. Would you like to grant usage access permission now?</string>
    <string name="grant">Grant</string>
    <string name="open_source_contributions">Open source stuff</string>
    <string name="search_or_type_url">Search or type URL</string>
    <string name="voice_prompt">Speak your query</string>
    <string name="web_heads">Web Heads</string>
    <string name="webhead_spawn_summary">Initial spawn location</string>
    <string name="webhead_spawn_title">Choose where the web heads initially appears</string>
    <string name="credits">Credits</string>
    <string name="icon_design">Icon Design</string>
    <string name="overlay_permission_content">To draw the web heads on screen, screen overlay permission needs to be granted. Would you like to grant it now?</string>
    <string name="webheads_intro_1">When you open a link in any app, a floating bubble called web head will be created on screen and Lynket will attempt to prefetch the link.</string>
    <string name="webheads_intro_2_new">On opening multiple links, these web heads will automatically stack on each other. Long press on web head to access the context menu.</string>
    <string name="webheads_intro_3">When you start dragging a web head, a trash will be shown. Drop on this trash to delete the web head.</string>
    <string name="webheads_intro_4_lolli">Aggressive background loading will load the page in background while you continue to use the app you are in. \n <b>A flicker of opening the tab might appear. This is intentional and not a bug.</b></string>
    <string name="webheads_intro_4">Lynket prioritizes the last opened link and pre-fetches it. The recommended method is to click the web heads one by one from top to bottom. Enabling close web heads on launch wil make this seamless.</string>
    <string name="web_head_permission_toast">To open links in floating bubbles, Lynket needs drawing over other apps permission, please grant to continue or disable Web Heads in Lynket settings.</string>
    <string name="tap_close_all">Tap to close all</string>
    <string name="web_heads_service">Web Heads Active</string>
    <string name="join_beta">Join Beta</string>
    <string name="become_a_tester">Become a tester</string>
    <string name="join_beta_content">Beta releases are experimental builds that has the latest features but has few bugs. You can contribute to the development by joining as tester and then reporting bugs you face in the Google+ Community. \n\nPlease make sure you have joined the Google+ community, and then click the become a tester button to go to Google Play testing link. \n\nNOTE: You have to join the community to become a tester.</string>
    <string name="no_voice_rec_apps">No compatible voice recognition apps found</string>
    <string name="loading">Loading…</string>
    <string name="share_failed_msg">Could not share to the app, defaulting to normal share</string>
    <string name="revoke_accessibility_permission">You can now revoke Lynket\'s accessibility service permission.</string>
    <string name="last_fetched_urls">Last fetched urls</string>
    <string name="per_apps_on">Per app settings turned on</string>
    <string name="per_apps_off">Per app settings turned off</string>
    <string name="translations">Translations</string>
    <string name="merge_tabs">Merge tabs and apps</string>
    <string name="merge_tabs_explanation">See your tabs with other recent apps on your phone\'s Overview screen.</string>
    <string name="already_loaded">Already loaded</string>
    <string name="add_home_screen_begun">Shortcut will be added shortly</string>
    <string name="bottom_bar_pref_summary">Shows an additional toolbar with extra options</string>
    <string name="bottom_bar_pref_title">Show bottom bar</string>
    <string name="bottom_bar">Bottom Bar</string>
    <string name="open_in_new_tab">Open in new tab</string>
    <string name="options">Options</string>
    <string name="customize">Customize</string>
    <string name="not_set">Not Set</string>
    <string name="not_found">Not Found</string>
    <string name="app_preferences">App Preferences</string>
    <string name="behavior_preferences">Behavior</string>
    <string name="additional_preferences">Additional</string>
    <string name="notifications">Notifications</string>
    <string name="webhead_size_title">Size</string>
    <string name="webhead_size_dialog">Choose the size of web heads</string>
    <string name="changelog_skipped">Changelog skipped due to an error</string>
    <string name="see_whats_new">See what\'s new</string>
    <string name="help_translations">Help translate app to your language.</string>
    <string name="aggressive_background_loading">Aggressive background loading</string>
    <string name="aggressive_background_loading_desc">Web pages will be loaded in background instead of just pre-fetching</string>
    <string name="aggresive_dia_title">Merge tabs and apps required</string>
    <string name="aggresive_dia_content">Aggressive background loading requires merge tabs and apps preference to be enabled. It is enabled for you now.</string>
    <string name="merge_tabs_off_title">Attention</string>
    <string name="merget_tabs_off_content">Disabling merge tabs and apps will also disable aggressive background loading.</string>
    <string name="web_sites">Websites</string>
    <string name="share_all">Share all</string>
    <string name="thank_you">Thank you very much!</string>
    <string name="save_time">Save time</string>
</resources>