<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000" ><!-- 背景 半透明 -->
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/index_popup_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
   <RelativeLayout
       android:id="@+id/title_rl"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:id="@+id/cancel_tv"
           android:layout_alignParentLeft="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="10dp"
           android:gravity="center_vertical"
           android:text="@string/cancel"
           android:textColor="@color/common_text_red"
           android:textSize="17sp" />

       <TextView
           android:id="@+id/tv_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="10dp"
           android:gravity="center_vertical"
           android:layout_centerHorizontal="true"
           android:text="@string/select_face"
           style="@style/CheYiPai.TextAppearance.Middle.BLACK_333333"
            />
       <TextView
           android:id="@+id/tv_sure"
           android:layout_alignParentRight="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginRight="10dp"
           android:layout_marginTop="10dp"
           android:gravity="center_vertical"
           android:text="@string/sure"
           android:textColor="@color/common_text_red"
           android:textSize="17sp" />
   </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="160dip"
        android:layout_centerInParent="true"
        android:layout_alignBottom="@id/title_rl"

        android:background="@drawable/index_popup_window"
        android:orientation="vertical" >
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="7dp"
            android:background="@color/color_text_faint_gray" />

        <com.cheyipai.ui.view.ScrollListView
            android:id="@+id/face_lv"
            android:layout_width="match_parent"
            android:layout_height="160dp"
           />

    </LinearLayout>
    </LinearLayout>
</RelativeLayout>